--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=VM Points
+author=JohnnyC
+description=Keep track of how many points you have Volcanic Mines
+tags=points,volcanic mines,vm
+plugins=com.VmPoints.VmPointsPlugin
